set send X-User-ID from header
